--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "prettier-plugin-tailwindcss": "^0.7.2",
         "tailwindcss": "^4.1.18",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.13.1"
     }
 }
